
extends Control






func _on_Quit_pressed():
	Game.quit_game()


func _on_Credits_pressed():
	pass # replace with function body


func _on_Options_pressed():
	pass # replace with function body


func _on_LoadGame_pressed():
	pass # replace with function body


func _on_NewGame_pressed():
	pass # replace with function body
